--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/card.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div class="card">
@@ -8,5 +8,6 @@ BINGOカード<br>
 クリックするとチェックできます。
 <div class="outer" id="outer"></div>
 </div>
+<script type="text/javascript" src="card.js"></script>
 </body>
 </html>
