--- a/bingo.html
+++ b/bingo.html
@@ -3,12 +3,12 @@
     <link rel="stylesheet" type="text/css" href="bingo.css">
 </head>
 <body>
-<h1>番号を発表する画面</h1>
+<h1>次の数字は...!!!!!!!</h1>
 
 <div class="main" id='main'></div>
 <button id='button'>スタート</button>
 
-<h2>すでに出た数字</h2>
+<h2>今まで出た数字確認！！（見落としてるかもよ）</h2>
 <div id="history"></div>
 <script type="text/javascript" src="bingo.js"></script>
 </body>
