--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 <div class="card">
-BINGOカード<br>
-クリックするとチェックできます。
+JIEI・BINGO!!!!<br>
+クリックするとチェックできるよ!!
 <div class="outer" id="outer"></div>
 </div>
 <script type="text/javascript" src="card.js"></script>
